# shopping-core

./: .gitignore  pyproject.toml
api/models/: __init__.py  audit_user.py  auto_timestamp.py  base.py
core/: settings.py
product/constants/: product.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  category_tagging.py  product.py  product_attibute_name.py  product_attribute.py
