[tool.poetry]
name = "shopping-core"
version = "0.1.0"
description = ""
authors = ["khue.dao, n"]
[tool.pyright]
    exclude                  = ["**/node_modules", "**/__pycache__"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
mysqlclient = "^2.2.5"
django-environ = "^0.11.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
